Remove fixed container width on mobile

--- a/src/components/app.css
+++ b/src/components/app.css
@@ -15,7 +15,7 @@
   z-index: var(--ct-z-index);
 }
 
-@media only screen and (min-width: 640px) {
+@media only screen and (min-width: 768px) {
   :host(.cookie-though) {
     width: 311px;
   }
